--- a/style.css
+++ b/style.css
@@ -70,16 +70,14 @@
     transition: all 1.5s;
 }
 .ex-7-img:hover{
-    filter: grayscale(.5);
-    filter: sepia(.8);
+    filter: grayscale(.5) sepia(.8);
 }
 /* Esercizio 8 */
 .ex-8-img{
     transition: all 1.5s;
 }
 .ex-8-img:hover{
-    filter: grayscale(.5);
-    filter: sepia(.8);
+    filter: grayscale(.5) sepia(.8);
     border-radius: 20px;
 }
 
@@ -90,8 +88,7 @@
     transition: all 1.5s;
 }
 .ex-9-img:hover{
-    filter: grayscale(.5);
-    filter: sepia(.8);
+    filter: grayscale(.5) sepia(.8);
     border-radius: 20px;
     transform: scale(1.5);
 }
@@ -99,10 +96,39 @@
 /* Esercizio 10 */
 .ex-10-icon {
     font-size: 60px;
+    animation: charging-icon 1s linear infinite reverse;
 }
+@keyframes charging-icon {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+/* animation: name duration timing-function delay iteration-count direction fill-mode; */
+
+
+/* Esercizio 11 */
 .ex-11-icon {
     font-size: 60px;
 }
+.ex-11-icon:hover{
+    animation: spin-and-reverse 2s linear;
+}
+@keyframes spin-and-reverse{
+    0%{
+        transform: rotate(0);        
+    }
+    80%{
+        transform: rotate(270deg);
+    }
+    100%{
+        transform: rotate(0);
+    }
+}
+
+/* Esercizio 12-13 */
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
@@ -131,4 +157,17 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+/* Esercizio 12 */
+.ex-12-button:hover{
+    animation: top-bar 1s linear;
+}
+@keyframes tob-bar{
+    0%{
+        left: 0;
+    }
+    100%{
+        left: calc(100% - 60px);
+    }
 }
