--- a/style.css
+++ b/style.css
@@ -106,8 +106,6 @@
         transform: rotate(360deg);
     }
 }
-/* animation: name duration timing-function delay iteration-count direction fill-mode; */
-
 
 /* Esercizio 11 */
 .ex-11-icon {
@@ -160,14 +158,38 @@
 }
 
 /* Esercizio 12 */
-.ex-12-button:hover{
-    animation: top-bar 1s linear;
+.ex-12-button:hover .ex-12-top-white{
+    animation: tob-bar 2s linear;
+}
+.ex-12-button:hover .ex-12-bottom-white{
+    animation: bottom-bar 2s linear;
 }
 @keyframes tob-bar{
     0%{
-        left: 0;
+        top: -10px;
+        left: 10%;
     }
-    100%{
+    50%{
+        top: -10px;
         left: calc(100% - 60px);
     }
+    100%{
+        top: -10px;
+        left: 10%;
+    }
 }
+@keyframes bottom-bar{
+    0%{
+        bottom: -10px;
+        right: 20%;
+    }
+    50%{
+        bottom: -10px;
+        right: calc(100% - 60px);
+    }
+    100%{
+        bottom: -10px;
+        right: 20%;
+    }
+}
+/* animation: name duration timing-function delay iteration-count direction fill-mode; */
