--- a/style.css
+++ b/style.css
@@ -159,12 +159,12 @@
 
 /* Esercizio 12 */
 .ex-12-button:hover .ex-12-top-white{
-    animation: tob-bar 2s linear;
+    animation: top-bar 2s linear;
 }
 .ex-12-button:hover .ex-12-bottom-white{
     animation: bottom-bar 2s linear;
 }
-@keyframes tob-bar{
+@keyframes top-bar{
     0%{
         top: -10px;
         left: 10%;
@@ -173,6 +173,7 @@
         top: -10px;
         left: calc(100% - 60px);
     }
+
     100%{
         top: -10px;
         left: 10%;
@@ -186,6 +187,67 @@
     50%{
         bottom: -10px;
         right: calc(100% - 60px);
+    }
+    100%{
+        bottom: -10px;
+        right: 20%;
+    }
+}
+
+/* Esercizio 13 */
+.ex-13-button:hover .ex-13-top-white{
+    animation: top-bar-complete 2s linear;
+}
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: bottom-bar-complete 2s linear;
+}
+@keyframes top-bar-complete{
+    0%{
+        top: -10px;
+        left: 10%;
+    }
+    20%{
+        top: -10px;
+        left: calc(100% - 50px);
+    }
+    40%{
+        top: 60px;
+        left: calc(100% - 50px);
+    }
+    60%{
+        top: 60px;
+        left: -10px;
+    }
+    80%{
+        top: -10px;
+        left: -10px;
+    }
+    100%{
+        top: -10px;
+        left: 10%;
+    }
+}
+@keyframes bottom-bar-complete{
+    0%{
+        bottom: -10px;
+        right: 20%;
+    }
+    20%{
+        bottom: -10px;
+        right: calc(100% - 50px);
+    }
+    
+    40%{
+        bottom: 60px;
+        right: calc(100% - 60px);
+    }
+    60%{
+        bottom: 60px;
+        right: -10px;
+    }
+    80%{
+        bottom: -10px;
+        right: -10px;
     }
     100%{
         bottom: -10px;
